style: adjust layout and scrollbar issues

--- a/app/javascript/components/App.css
+++ b/app/javascript/components/App.css
@@ -1,7 +1,7 @@
 html,
 body {
   background-color: #282c34;
-  overflow-y: hidden;
+  overflow-y: auto;
 }
 
 .App {
@@ -11,8 +11,8 @@ body {
   flex-direction: column;
   font-family: sans-serif;
   font-size: calc(10px + 2vmin);
-  height: 100vh;
   justify-content: center;
+  padding-top: 5%;
   text-align: center;
 }
 
